LiveAuctionService 내부 변수 제거 Redis Streams 로 마이그레이션 완료